--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,4 @@ $RECYCLE.BIN/
 # Mac desktop service store files
 .DS_Store
 /TestResult.xml
+/src/.vs/AspNet.Identity.MongoDB/v15/Server/sqlite3
